FileChooser: Properly handle mnemonics in 'accept_label'

The FileChooser portal doc [1] for 'accept_label' says:

> accept_label s
>
>     The label for the accept button. Mnemonic underlines are allowed.

Since Qt does not use underscores/underlines, but the ampersand
character ('&') for mnemonics, convert the retrieved
text accordingly, to make the mnemonic applied at the correct
position and preserve literal '&'s.

[1] https://flatpak.github.io/xdg-desktop-portal/portal-docs.html#gdbus-org.freedesktop.impl.portal.FileChooser

BUG: 422340